Attempt fix hero on mobile

--- a/src/styles/components/homepage/_homepage-hero.scss
+++ b/src/styles/components/homepage/_homepage-hero.scss
@@ -3,24 +3,38 @@
     height: 100dvh;
     justify-content: center;
     align-items: center;
-    background: rgba(30, 30, 30, 0.59);
     width: 100%;
     padding-inline: 2rem;
-    
-    &_background {
-        z-index: -1;
+    background: url("/D11/hero.webp") center no-repeat;
+    background-size: cover;
+    position: relative;
+    z-index: 1;
+
+    &::before {
+        content: "";
         position: absolute;
         top: 0;
-        left: 0;
         width: 100%;
         height: 100%;
+        background: $black;
+        opacity: 0.6;
+        z-index: -1;
+      }
+    
+    // &_background {
+    //     z-index: -1;
+    //     position: absolute;
+    //     top: 0;
+    //     left: 0;
+    //     width: 100%;
+    //     height: 100%;
         
-        &_img {
-            height: 100%;
-            width: 100%;
-            object-fit: cover;
-        }
-    }
+    //     &_img {
+    //         height: 100%;
+    //         width: 100%;
+    //         object-fit: cover;
+    //     }
+    // }
 
     &_content {
         display: flex;
@@ -55,7 +69,7 @@
 
 @media (min-width: 769px) {
     .homepage-hero {
-        // justify-content: flex-start;
+        background-attachment: fixed;
 
         &_content {
 
