--- a/src/styles/components/homepage/_homepage-partners.scss
+++ b/src/styles/components/homepage/_homepage-partners.scss
@@ -5,6 +5,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  overflow-x: hidden;
   
   .wrapper {
     display: flex;
@@ -35,7 +36,6 @@
           mix-blend-mode: multiply;
         }
       }
-
     }
   }
 
